--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ ext {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
     //m1 mac netty lib
     if (System.getProperty("os.name") == "Mac OS X" && System.getProperty("os.arch") == "aarch64") {
