Feat: 데이터 변조 코드 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,19 @@
 spring:
   application:
     name: gateway
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: test_route
+#          uri: http://localhost:11434
+#          predicates:
+#            - Path=/api/*
+#          filters:
+#            - name: Test2Filter
 
 host:
   url: http://localhost:11434
 
+logging:
+  level:
+    org.springframework.cloud.gateway: TRACE
