Feat: request filter order 추가, 암호화 여부 application.yml 로 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
 host:
   url: http://localhost:11434
 
+app:
+  message:
+    encrypted: true
+
 logging:
   level:
     org.springframework.cloud.gateway: TRACE
